fix weird overflow

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -7623,3 +7623,9 @@ body {
 .toggle-reply-mobile > i {
 	margin-top: 0.35rem !important;
 }
+
+@media (max-width: 768px) {
+	.report {
+		max-width: 70vw;
+	}
+}
